# gpt.rs

./: .gitignore  Cargo.toml  README.md
chat/: Cargo.toml
chat/src/: huggingface.rs  lib.rs  personality.rs
chat/src/g4f/: aichatos.rs  airforce.rs  binjie.rs  blackbox.rs  cnote.rs  ddg.rs  deep.rs  feedough.rs  freechatgpt.rs  gemini.rs  mod.rs  nexra.rs  perplexity.rs  pizzagpt.rs  snova.rs  twitterbio.rs  upstage.rs
misc/g4f-tests/: test.py
misc/hugging/: api.py  list-models.py
