[package]
name = "chat"
description = "pythonic chat modules"
version = "0.8.9"
edition = "2021"

[dependencies]
chat-utils      = { path = "../chat-utils" }
anyhow          = { workspace = true }
tokio           = { workspace = true }
once_cell       = { workspace = true }
inline-python   = "0.12"
async-trait     = "0.1"
futures         = "0.3"
regex           = "1"
rand            = "0.8"

[dev-dependencies]
serial_test = "3"
